# wexplorer

./: .gitignore  Cargo.toml  docker-compose.yml
kreya/: wexplorer.krproj
kreya/indexing/: directory.krpref
kreya/indexing/IndexingApi/: GetIndexingPages.krop  GetIndexingWebSites.krop  IndexWebSite-request.json  IndexWebSite.krop
kreya/searching/: directory.krpref
kreya/searching/SearchingApi/: AddPage-request.json  AddPage.krop  Search-request.json  Search.krop
wexplorer_indexing/grpc_client/: Cargo.toml  build.rs
wexplorer_indexing/grpc_client/src/: lib.rs
wexplorer_indexing/proto/: indexing.proto
wexplorer_indexing/server/: Cargo.toml  app_settings.json  build.rs
wexplorer_indexing/server/src/: api.rs  main.rs  queue.rs
wexplorer_indexing/server/src/indexing/: indexed_links_storage.rs  indexer.rs  mod.rs  text_extracting.rs  url_processing.rs
wexplorer_infrastructure/: Cargo.toml
wexplorer_infrastructure/src/: config.rs  lib.rs  logging.rs  server.rs
wexplorer_searching/grpc_client/: Cargo.toml  build.rs
wexplorer_searching/grpc_client/src/: lib.rs
wexplorer_searching/proto/: searching.proto
wexplorer_searching/server/: Cargo.toml  app_settings.json  build.rs
wexplorer_searching/server/src/: api.rs  main.rs
wexplorer_web_app/grpc_client/: Cargo.toml  build.rs
wexplorer_web_app/grpc_client/src/: lib.rs
wexplorer_web_app/proto/: echo.proto  web_searching.proto
wexplorer_web_app/server/: Cargo.toml  build.rs
wexplorer_web_app/server/src/: main.rs  web_searching_api.rs
wexplorer_web_client/: Cargo.toml
wexplorer_web_client/src/: main.rs
