[workspace]
members = [
    "wexplorer_infrastructure",
    "wexplorer_web_app/server",
    "wexplorer_web_app/grpc_client",
    "wexplorer_indexing/server",
    "wexplorer_indexing/grpc_client",
    "wexplorer_searching/server",
    "wexplorer_searching/grpc_client",
    "wexplorer_web_client"
]
resolver = "2"

[workspace.dependencies]
prost = "0.12"
tokio = { version = "1.32", features = ["macros"] }
tokio-util = "0.7"
tonic = { version = "0.10", default-features = false, features = ["codegen", "prost"] }
tonic-web = { version = "0.10" }
tonic-build = { version = "0.10", default-features = false, features = ["prost"] }
leptos = { version = "0.5.0-beta", features = ["csr", "nightly"] }
tonic-web-wasm-client = { git = "https://github.com/kolebynov/tonic-web-wasm-client.git" }
hyper = "0.14"
tower = "0.4"
tower-http = { version = "0.4", default-features = false, features = ["cors"] }
tracing = "0.1"
tracing-log = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
anyhow = "1.0"
scraper = "0.17"
reqwest = "0.11"
itertools = "0.11"
url = "2.4"
num = "0.4"
form_urlencoded = "1.2"
ego-tree = "0.6"
opensearch = "2.1"
serde = "1.0"
serde_json = "1.0"
rusqlite = { version = "0.29", features = ["bundled", "url", "chrono"] }
const_format = "0.2"
sea-query = { version = "0.30", features = ["derive", "backend-sqlite"] }
chrono = "0.4"
config = { version = "0.13", default-features = false, features = ["json"] }