[package]
name = "wexplorer_infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
hyper = { workspace = true }
tonic = { workspace = true }
config = { workspace = true }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }