[package]
name = "wexplorer_web_app_server"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tonic = { workspace = true, default-features = true }
tonic-web = { workspace = true }
tower-http = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true, default-features = true }